# book-library

./: .gitignore  README.md  create_admin.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py  0003_book_cover_picture.py  0004_alter_book_cover_picture.py  0005_alter_book_cover_picture.py  0006_alter_book_cover_picture.py  0007_alter_book_cover_picture.py  0008_bookreview_created_at.py  0009_book_why_read.py  0010_wishlistitem.py
app/templates/books/: detail.html  list.html  teachers_dashboard.html  wishlist.html
config/: settings.py  urls.py  view.py
notifications/: models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
notifications/templates/notifications/: list.html
static/css/: main.css
templates/: base.html  home.html  landing.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_profile_picture.py  0003_alter_customuser_profile_picture.py  0004_alter_customuser_profile_picture.py  0005_alter_customuser_profile_picture.py  0006_friendshiprequest.py  0007_customuser_role.py  0008_customuser_school_class.py
users/templates/users/: friend_requests.html  friends_list.html  login.html  people.html  profile.html  profile_update.html  register.html  user_profile.html
