[project]
name = "goodreads-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "pillow>=12.0.0",
    "psycopg>=3.2.12",
    "ruff>=0.14.4",
]
