[project]
name = "goodreads-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "dj-database-url>=3.0.1",
    "django>=5.2.8",
    "django-crispy-forms>=2.5",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg>=3.2.12",
    "python-decouple>=3.8",
    "ruff>=0.14.4",
    "whitenoise>=6.11.0",
]
